--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Aaron's 博客
 email: aaronxiao0927@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   我的github pages
-baseurl: "/aaron.github.io" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kim_18162579527
 github_username:  Aaron0927
